--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tondi-client"
+name = "bp-tondi"
 
 authors       = ["Avatolabs"]
 description   = "Tondi API client library"
@@ -10,7 +10,7 @@ keywords      = ["Tondi"]
 license       = "MIT"
 readme        = "README.md"
 repository    = "https://github.com/Aavatolabs/bp-tondi-client"
-version       = "0.12.0-rc.1"
+version       = "0.12.0-rc.2"
 
 
 [features]
@@ -18,11 +18,12 @@ default = []
 
 
 [dependencies]
+hex-literal       = { version = "1.0" }
 log               = { version = "0.4" }
-nill              = { version = "1.1.0" }
+nill              = { version = "=1.0" }
 thiserror         = { version = "2.0" }
 tokio             = { version = "1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }
-tondi-grpc-client = { version = "0.17.0", git = "ssh://git@github.com/AvatoLabs/Tondi.git", branch = "blake3-hasher" }
+tondi-grpc-client = { version = "0.17.0", git = "ssh://git@github.com/AvatoLabs/Tondi.git", branch = "blake3-hasher-dev" }
 
 
 [dev-dependencies]
